--- a/jms-bench-producer/src/main/resources/application.properties
+++ b/jms-bench-producer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.activemq.user=admin
-spring.activemq.password=azertyuiopqs
+spring.activemq.user = admin
+spring.activemq.password = ${SPRING_JMS_PASSWORD}
 
 # benchmarking-broker-2
-spring.activemq.broker-url=failover:(ssl://b-d1192aa7-0848-456b-b4e3-946a4fb599f1-1.mq.eu-central-1.amazonaws.com:61617,ssl://b-d1192aa7-0848-456b-b4e3-946a4fb599f1-2.mq.eu-central-1.amazonaws.com:61617)
+spring.activemq.broker-url = failover:(ssl://b-d1192aa7-0848-456b-b4e3-946a4fb599f1-1.mq.eu-central-1.amazonaws.com:61617,ssl://b-d1192aa7-0848-456b-b4e3-946a4fb599f1-2.mq.eu-central-1.amazonaws.com:61617)
